@@ -1,6 +1,7 @@
 ;;; ezimage --- Generalized Image management
 
-;;; Copyright (C) 1999, 2000, 2001, 2002, 2003 Free Software Foundation
+;;; Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004,
+;;;   2005 Free Software Foundation, Inc.
 
 ;; Author: Eric M. Ludlam <zappo@gnu.org>
 ;; Keywords: file, tags, tools
